<resources>
    <string name="app_name">MyFoE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txtPassword">Password</string>
    <string name="txtStudentID">Student ID</string>
    <string name="txtForgotPassword">Forgot Password</string>
    <string name="txtLogin">Login</string>
    <string name="myfoe">myfoe</string>
    <string name="txtMemberSignIn">Member Sign In</string>
    <string name="txtRegisterNow">Register Now</string>
    <string name="Not_member">Not a member</string>
    <string name="txtAdminSignIn">Admin Sign In</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtName">Name</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="txtStaffID">Staff ID</string>
    <string name="txtNews">News</string>
    <string name="txtHotlines">Hotlines</string>
    <string name="txtStaff">Staff</string>
    <string name="txtLab">Laboratory</string>
    <string name="txtFloorPlan">Floor Plan</string>
    <string name="txtProfile">Profile</string>
    <string name="title_activity_floor_plan">FloorPlan</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Admin">Administration</string>
    <string name="Prof"><![CDATA[Professors & Associate Professors]]></string>
    <string name="SeniorLec">Senior Lecturers</string>
    <string name="Lec">Lecturers</string>
    <string name="txtFullName">Full Name</string>
    <string name="txtEmail">Email Address</string>
</resources>