<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="65dp"
        android:contentDescription="@string/myfoe"
        app:srcCompat="@drawable/untitled_design" />

    <Button
        android:id="@+id/MemberSignIn"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/txtMemberSignIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/orange" />

    <Button
        android:id="@+id/AdminSignIn"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_below="@+id/MemberSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/txtAdminSignIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/orange" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AdminSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textColor="@color/prussian_blue"
        android:text="@string/Not_member" />

    <Button
        android:id="@+id/RegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/txtRegisterNow"
        app:backgroundTint="@color/prussian_blue"
        android:textColor="@color/white" />

</RelativeLayout>